<resources>
    <string name="app_name">Capture Clock</string>

    <string name="enum_bathroom">Bathroom</string>
    <string name="enum_kitchen">Kitchen</string>
    <string name="enum_livingroom">Livingroom</string>

    <string name="enum_bathroom_toilet">Toilet</string>
    <string name="enum_bathroom_shower">Shower</string>
    <string name="enum_bathroom_toothbrush">Toothbrush</string>
    <string name="enum_bathroom_waterbowl">Washbowl</string>
    <string name="enum_kitchen_hotplate">Hotplate</string>
    <string name="enum_kitchen_fridge">Fridge</string>
    <string name="enum_livingroom_couch">Couch</string>
    <string name="enum_livingroom_armchair">Armchair</string>
    <string name="enum_room_nothing">Not relevant</string>

    <string name="enum_monday">Monday</string>
    <string name="enum_tuesday">Tuesday</string>
    <string name="enum_wednesday">Wednesday</string>
    <string name="enum_thursday">Thursday</string>
    <string name="enum_friday">Friday</string>
    <string name="enum_saturday">Saturday</string>
    <string name="enum_sunday">Sunday</string>

    <string name="time" translatable="false">%1$d:%2$s</string>
    <string name="timerLongTime" translatable="false">%1$d:%2$s:%3$s</string>
    <string name="since_in_seconds">%1$d sec</string>
    <string name="since_in_minutes">%1$d:%2$s min</string>
    <string name="since_in_hours">%1$d:%2$s hours</string>
    <string name="volume_percentage" translatable="false">%1$s%%</string>
    <string name="delete">delete</string>
    <string name="set_alarm">Set</string>
    <string name="cancel">Cancel</string>
    <string name="weekly">weekly</string>
    <string name="point" translatable="false">&#8226;</string>
    <string name="name_hint">Name it</string>
    <string name="room_with_object" translatable="false">%1$s - %2$s</string>
    <string name="well_done">Well done!\n</string>
    <string name="select_ringtone">Select a ringtone</string>
    <string name="ends">ends: %1$s</string>
    <string name="ended">ended: %1$s</string>
    <string name="ringsIn">Set for %1$s from now</string>
    <string name="share_and_rate">Share &#8226; Rate</string>
    <string name="do_u_like">Do you like the App?</string>
    <string name="share">Share the app with your friends!</string>
    <string name="rate">Rate the app on Google Play!</string>
    <string name="feedback">Give me private feedback.</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="legal">Legal information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="legal_notice">Legal Notice</string>
    <string name="legal_notice_content">Developer: Nicolai Rahm\n\nEmil-Nolde-Weg 71a\n\n48165 Muenster, Germany\n\nPhone: +4915785735297\n\nE-mail: nicolairahm@gmail.com</string>
    <string name="save_timer">Save</string>

    <string name="fragment_overview_title">Alarms</string>
    <string name="fragment_timer_title">Timer</string>
    <string name="camera_error">Camera failed</string>

    <string name="alarm_notification_name">Alarm clock</string>
    <string name="alarm_notification_description">Alarm is active!</string>
    <string name="alarm_notification_title">Ring Ring</string>
    <string name="alarm_notification_text">Capture the object!</string>

    <string name="timer_notification_name">Timer</string>
    <string name="timer_notification_description">Shown when the timer goes off.</string>
    <string name="timer_notification_title">Ring Ring</string>
    <string name="timer_notification_text">Timer is finished</string>

    <string name="no_email_client">There are no email clients installed.</string>
    <string name="email_subject">Feedback for: %1$s</string>
    <string name="give_feedback">Feedback e-mail</string>
    <string name="share_message">Try this cool alarm clock app: %1$s</string>
    <string name="share_chooser">How do you want to send the link?</string>

    <!-- Content description -->
    <string name="trash_can_img">trash can</string>
    <string name="repeat_img">repeat weekly</string>

</resources>
