<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="@color/colorPrimary">

        <TextView
                android:text="@string/do_u_like"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/doUlike" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                android:textSize="@dimen/do_u_like" android:textColor="@color/colorText"
                android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/shareText"
                app:layout_constraintTop_toTopOf="@+id/fabShare"
                app:layout_constraintBottom_toBottomOf="@+id/fabShare"
                app:layout_constraintStart_toEndOf="@+id/fabShare" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintHorizontal_bias="0.0" android:textColor="@color/colorText"/>
        <TextView
                android:text="@string/rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/rateText"
                app:layout_constraintTop_toTopOf="@+id/fabRate"
                app:layout_constraintBottom_toBottomOf="@+id/fabRate"
                app:layout_constraintStart_toEndOf="@+id/fabRate" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintHorizontal_bias="0.0" android:textColor="@color/colorText"/>
        <TextView
                android:text="@string/feedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/feedbackText"
                app:layout_constraintTop_toTopOf="@+id/fabFeedback"
                app:layout_constraintBottom_toBottomOf="@+id/fabFeedback"
                app:layout_constraintStart_toEndOf="@+id/fabFeedback" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintHorizontal_bias="0.0" android:textColor="@color/colorText"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="share"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/ic_share_white_24dp"
                android:id="@+id/fabShare"
                app:layout_constraintTop_toBottomOf="@+id/doUlike"
                app:layout_constraintBottom_toTopOf="@+id/fabRate"
                app:layout_constraintVertical_chainStyle="spread" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rate"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/ic_star_white_24dp"
                android:id="@+id/fabRate"
                app:layout_constraintTop_toBottomOf="@+id/fabShare"
                app:layout_constraintBottom_toTopOf="@+id/fabFeedback"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="feedback"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/ic_rate_review_white_24dp"
                android:id="@+id/fabFeedback" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fabRate"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>